@@ -89,6 +89,7 @@ type BlockDB struct {
 
 	blocksToWrite chan oneB2W
 	datToWrite uint64
+	flushNow bool
 }
 
 
@@ -138,7 +139,7 @@ func (db *BlockDB) addToCache(h *btc.Uint256, bl []byte, str *btc.Block) (crec *
 		crec.LastUsed = time.Now()
 		return
 	}
-	if len(db.cache) >= db.max_cached_blocks {
+	for len(db.cache) >= db.max_cached_blocks {
 		var oldest_t time.Time
 		var oldest_k [btc.Uint256IdxLen]byte
 		for k, v := range db.cache {
@@ -150,6 +151,8 @@ func (db *BlockDB) addToCache(h *btc.Uint256, bl []byte, str *btc.Block) (crec *
 		if rec := db.blockIndex[oldest_k]; rec!=nil && rec.ipos==-1 {
 			// Oldest cache record not yet written - keep it
 			//println("BlockDB: Oldest cache record not yet written - keep it")
+			db.flushNow = true
+			break
 		} else {
 			delete(db.cache, oldest_k)
 		}
@@ -175,9 +178,24 @@ func hash2idx (h []byte) (idx [btc.Uint256IdxLen]byte) {
 }
 
 
+// Make sure to call with the mutex unlocked
+func (db *BlockDB) checkFlush() {
+	db.mutex.Lock()
+	fn := db.flushNow
+	db.flushNow = false
+	db.mutex.Unlock()
+	if fn {
+		//println("Too many blocksToWrite - flush the data...")
+		if !db.writeAll() {
+			panic("many to write but nothing stored")
+		}
+		//println("flush done")
+	}
+}
+
+
 func (db *BlockDB) BlockAdd(height uint32, bl *btc.Block) (e error) {
 	var trust_it bool
-	var flush_now bool
 	db.mutex.Lock()
 	idx := bl.Hash.BIdx()
 	if rec, ok := db.blockIndex[idx]; !ok {
@@ -185,7 +203,11 @@ func (db *BlockDB) BlockAdd(height uint32, bl *btc.Block) (e error) {
 		db.addToCache(bl.Hash, bl.Raw, bl)
 		db.datToWrite += uint64(len(bl.Raw))
 		db.blocksToWrite <- oneB2W{idx:idx, h:bl.Hash.Hash, data:bl.Raw, height:height, txcount:uint32(bl.TxCount)}
-		flush_now = len(db.blocksToWrite)>=MAX_BLOCKS_TO_WRITE || db.datToWrite>=MAX_DATA_WRITE
+		if !db.flushNow {
+			if len(db.blocksToWrite)>=MAX_BLOCKS_TO_WRITE || db.datToWrite>=MAX_DATA_WRITE {
+				db.flushNow = true
+			}
+		}
 	} else {
 		//println("Block", bl.Hash.String(), "already in", rec.trusted, bl.Trusted)
 		if !rec.trusted && bl.Trusted {
@@ -205,12 +227,7 @@ func (db *BlockDB) BlockAdd(height uint32, bl *btc.Block) (e error) {
 		db.BlockTrusted(bl.Hash.Hash[:])
 	}
 
-	if flush_now {
-		//println("Too many blocksToWrite - flush the data...")
-		if !db.writeAll() {
-			panic("many to write but nothing stored")
-		}
-	}
+	db.checkFlush()
 
 	return
 }
@@ -417,6 +434,7 @@ func (db *BlockDB) BlockGetExt(hash *btc.Uint256) (cacherec *BlckCachRec, truste
 		db.mutex.Lock()
 		cacherec = db.addToCache(hash, bl, nil)
 		db.mutex.Unlock()
+		db.checkFlush()
 	} else {
 		cacherec = &BlckCachRec{Data:bl}
 	}
